Fix overflow-x issues (maybe?!)

--- a/packages/@smotaal/tokenizer/examples/browser/styles.css
+++ b/packages/@smotaal/tokenizer/examples/browser/styles.css
@@ -19,8 +19,61 @@
   --markup-background: var(--markup-background, var(--markup-neutral-fade));
 }
 
+/** INHERIT **/ /* @import '/pholio/styles/inherit.css'; */
+@media only screen {
+  html {
+    box-sizing: border-box;
+    min-height: 100vh;
+    min-width: 100vw;
+    width: 100vw;
+    margin-left: calc(100vw - 100%);
+    -webkit-text-size-adjust: 100%;
+    font-size: 1rem;
+  }
+
+  body {
+    width: inherit;
+    min-height: inherit;
+    min-width: inherit;
+    /* max-height: inherit; */
+    overflow-y: scroll;
+    touch-action: pan-y;
+    background-color: var(--markup-background, #999);
+  }
+
+  .markup-container {
+    height: max-content;
+    width: inherit;
+    /* max-width: inherit; */
+    min-height: inherit;
+    min-width: inherit;
+    /* max-height: inherit; */
+    padding: 1ch;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  .markup-container .markup-content {
+    overflow-x: hidden;
+    overflow-y: visible;
+    padding-top: 4em;
+    margin-top: -4em;
+    margin-left: -1ch;
+    margin-right: -1ch;
+    line-break: loose;
+  }
+
+  .markup-container > header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 1ch;
+    z-index: 1;
+  }
+}
+
+/** FLEX **/ /* @import '/pholio/styles/flex.css'; */
+
 .markup-container {
-  flex: 1;
   background-color: var(--markup-background, transparent);
   color: var(--markup-color, currentColor);
   line-height: 1.5em;
@@ -29,8 +82,6 @@
   font-variant-ligatures: contextual;
   white-space: pre-wrap;
   transition: background 0.75s ease-in-out;
-  will-change: auto;
-  box-sizing: border-box;
 }
 
 .markup-container > header {
@@ -49,7 +100,6 @@
   --outset-border: 0.5px solid var(--border);
   display: grid;
   grid-auto-flow: column dense;
-  /* overflow-x: hidden; */
   grid-gap: 1ch;
   padding: 0.25ch 1ch;
   margin-bottom: 1ch;
@@ -58,17 +108,24 @@
     'Helvetica Neue', sans-serif;
   font-weight: 200;
   line-height: initial;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
+.markup-container > header div > [title] > [id] {
+  user-select: text;
+  -moz-user-select: text;
+  -webkit-user-select: text;
 }
 
 .markup-container > header div {
   display: grid;
   grid-gap: 0.25ch;
   grid-auto-flow: column dense;
-
   overflow-x: hidden;
   text-overflow: ellipsis;
   align-content: center;
-
   padding: 0.125ch;
 }
 
@@ -94,9 +151,6 @@
 }
 .markup-container > header div > [title] > [id] {
   font-weight: 300;
-  user-select: text;
-  -moz-user-select: text;
-  -webkit-user-select: text;
 }
 
 .markup-container > header div > [title] > [id]::before {
@@ -109,9 +163,6 @@
 
 .markup-container > header div > [title] > [id] + time {
   font-size: 87.5%;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
 }
 
 .markup-container > header div > [title] > [id] + time::before {
@@ -130,25 +181,17 @@
 
 .markup-container > header a[onclick] {
   display: inline-block;
-  /* box-sizing: padding-box; */
   width: 2.5ch;
   height: 0;
   padding: 25% 0;
-  border: 2pt solid transparent;
-  border-radius: 25%;
-
+  border-radius: 0.75ch;
   background-clip: border-box;
   border: var(--outset-border, none);
-  border-style: solid;
-  border-color: transparent;
-
+  line-height: 0;
   vertical-align: middle;
+  white-space: nowrap;
   text-align: center;
   overflow: hidden;
-
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
 }
 
 .markup-container > header a[onclick]:hover {
@@ -165,7 +208,7 @@
 
 i[icon] {
   font-style: normal;
-  font-family: 'Arial';
+  font-family: monospace;
   font-weight: 100;
   display: block;
   height: 50%;
@@ -177,34 +220,9 @@ i[icon] {
 }
 
 @media only screen {
-  html {
-    width: 100vw;
-    /* height: 100vh; */
-    /* min-width: 100vw; */
-    min-height: 100vh;
-    -webkit-text-size-adjust: 100%;
-  }
-
-  body {
-    min-height: inherit;
-    width: inherit;
-    display: grid;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    background-color: var(--markup-background, #999);
-    font-size: 1rem;
-    touch-action: pan-y;
-  }
-
-  .markup-container {
-    padding: 1ch;
-    margin: 0;
-    width: inherit;
-    display: grid;
-    grid-auto-rows: max-content;
-    /* overflow-x: hidden; */
+  .markup-container .markup-content {
+    /* will-change: filter, contents; */
+    transition: filter 0.15s ease-out;
   }
 
   .markup-container > header {
@@ -216,27 +234,14 @@ i[icon] {
     opacity: 0.9;
 
     /* TODO:  Fix sticky in Safari: http://cssdeck.com/labs/bu0nx69w */
-    position: -webkit-sticky;
-    position: sticky;
-    top: 1ch;
-
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
-    /* will-change: transform; */
-    /* transform: translateZ(0); */
-    z-index: 1;
-    /* margin-bottom: 1.25em; */
+    /* float: center; */
   }
 
   .markup-container.dark-mode > header {
     --shadow: var(--dark, transparent);
-  }
-
-  .markup-container .markup-content {
-    /* will-change: filter, contents; */
-    transition: filter 0.15s ease-out;
-    overflow-x: hidden;
   }
 
   .markup-container .markup-content.rendering,
@@ -284,6 +289,6 @@ i[icon] {
 
 @supports (padding: env(safe-area-inset-top)) {
   body {
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   }
 }
